--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,31 @@ body,
   height: 100%;
   width: 100%;
   font-family: "Nunito";
+  background: #f6f6f6;
+}
+.menu-item {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.0625rem;
+  padding-right: 4.75rem;
+  display: flex;
+  gap: 0.5rem;
+  cursor: pointer;
+  color: #7e7d88;
+}
+.menu-itemlast {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.0625rem;
+  display: flex;
+  gap: 0.5rem;
+  cursor: pointer;
+  color: #7e7d88;
+}
+.menu-icon {
+  width: 1.125rem;
+  height: 1.25rem;
+}
+.shadowitem {
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
